# FL-Automation

./: .gitignore  Directory.Build.props  Directory.Packages.props  FruityLink.Sdk.slnx  LICENSE  README.md
.github/workflows/: ci.yml  nuget.yml
docs/: avalonia-ui.md  community-plugins.md  fl-control-api.md  getting-started.md  menus-and-toolbar.md  native-bridge.md  plugin-lifecycle.md  window-embedding.md
native/bridge/: CMakeLists.txt  README.md  callthunk.asm  dllmain.cpp  sigscan.cpp  sigscan.h
samples/HelloFl/: HelloFl.csproj  HelloFlPlugin.cs
src/FruityLink.Core/: FruityLink.Core.csproj
src/FruityLink.FlStudio/: FruityLink.FlStudio.csproj
src/FruityLink.Host/: FruityLink.Host.csproj  GlueMarshal.cs  HostEntry.cs  HostWindow.cs  MenuGlue.cs  PluginGlue.cs  StubPluginManager.cs  ToolbarGlue.cs
src/FruityLink.Plugins.Abstractions/: FlMenuRegistryLocator.cs  FlToolbarRegistryLocator.cs  FruityLink.Plugins.Abstractions.csproj  IFlMenuRegistrar.cs  IFlPlugin.cs  IFlPreWarmPlugin.cs  IFlToolbarRegistrar.cs  IFlWindowHost.cs  IPluginContext.cs  IPluginManager.cs
src/FruityLink.Plugins.Host/: ContributionRegistryCore.cs  EnabledStateStore.cs  FruityLink.Plugins.Host.csproj  MenuContributionRegistry.cs  NullFlWindowHost.cs  PluginContext.cs  PluginHost.cs  PluginHostLogger.cs  PluginHotReloader.cs  PluginLoadContext.cs  PluginManager.cs  ShadowCopyStore.cs  ToolbarContributionRegistry.cs
src/FruityLink.Ui.Avalonia.Hosting/: EmbeddedAvaloniaHost.cs  EmbeddedAvaloniaView.cs  FruityLink.Ui.Avalonia.Hosting.csproj  UiThread.cs
(+27 files in other folders)
